//
//  NegativeUITests.swift
//  LuCalc
//
//  Created by Alex Luckjanov on 5/9/17.
//  Copyright © 2017 Alex Luckjanov. All rights reserved.
//

import XCTest

class NegativeUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testEmptyBothFields() {
        XCUIApplication().buttons["Calculate"].tap()
    }
    
    func testEmptyFirstField() {
        let app = XCUIApplication()
        let FirstNumField = app.textFields["First number"]
        FirstNumField.tap()
        FirstNumField.typeText("22")
        app.buttons["Calculate"].tap()
    }
    
    func testEmptySecondField() {
        let app = XCUIApplication()
        let SecondNumField = app.textFields["Second number"]
        SecondNumField.tap()
        SecondNumField.typeText("15")
        app.buttons["Calculate"].tap()
    }
    
}
